<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/hasil4">

    <TextView
        android:id="@+id/textAtas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Masuk ke"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/textTengah"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60" />

    <TextView
        android:id="@+id/textTengah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BANGUNIN.ID"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In!"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.900" />

    <EditText
                android:id="@+id/editUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/login_edit_background"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:autofillHints="@string/user_name"
                android:hint="@string/user_name"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.60000002"
                tools:layout_editor_absoluteX="70dp"
                tools:ignore="TextFields"
                android:inputType="text"/>



            <EditText
                android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/login_edit_background"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="10dp"
                android:autofillHints="@string/user_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUser"
            app:layout_constraintVertical_bias="0.15"
            tools:layout_editor_absoluteX="70dp"/>

    <ImageView
        android:id="@+id/showPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_visible"
        app:layout_constraintBottom_toBottomOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toTopOf="@+id/editPassword" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgotPassword"
        app:layout_constraintVertical_bias="0.20"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#FF9800"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.060000002"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/google"
        android:src="@drawable/common_google_signin_btn_icon_light_normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/google"
        app:layout_constraintBottom_toBottomOf="@id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/google"
        android:text="Sign Up with Google"/>

</androidx.constraintlayout.widget.ConstraintLayout>