<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup1"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_name"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:ignore="TextFields"
        tools:layout_editor_absoluteX="70dp" />

    <TextView
        android:id="@+id/textBergabung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bergabung Dengan"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.750"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textBangunin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BANGUNIN.ID"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textAtas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Belum\nMemiliki Akun?"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:gravity="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up!"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@id/editUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950" />

    <EditText
    android:id="@+id/editPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="55dp"
    android:layout_marginEnd="55dp"
    android:autofillHints="@string/user_name"
    android:background="@drawable/login_edit_background"
    android:drawableStart="@drawable/ic_baseline_lock_24"
    android:drawableLeft="@drawable/ic_baseline_lock_24"
    android:drawablePadding="10dp"
    android:hint="@string/password"
    android:inputType="text"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/editUser"
    app:layout_constraintVertical_bias="0.07"
    tools:layout_editor_absoluteX="70dp" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.10"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:textColor="#FF9800"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        app:layout_constraintVertical_bias="0.150000002"
        />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:autofillHints="@string/user_name"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="Confirm Password"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintVertical_bias="0.07"
        tools:layout_editor_absoluteX="70dp" />

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/signUp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.2"
    app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/google"
    android:src="@drawable/common_google_signin_btn_icon_light_normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/google"
        app:layout_constraintBottom_toBottomOf="@id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/google"
        android:text="Sign Up with Google"/>

</androidx.constraintlayout.widget.ConstraintLayout>